feat: apply the ability to get parameters from URLs

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="Cache-control" content="no-cache" />
-    <title>axe view</title>
+    <title>axe hash router</title>
     <!--<script defer="" src="app.js"></script>-->
   </head>
   <body>
@@ -11,6 +11,8 @@
       <header>
         <a href="#/">home</a>
         <a href="#/about">about</a>
+        <a href="#/about/1">user</a>
+        <a href="#/user/1/hello">mypage</a>
       </header>
     </div>
   </body>
