--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,6 @@
     <!--<script defer="" src="app.js"></script>-->
   </head>
   <body>
-    <div id="root">
-      <header>
-        <a href="#/">home</a>
-        <a href="#/about">about</a>
-        <a href="#/about/1">user</a>
-        <a href="#/user/1/hello">mypage</a>
-      </header>
-    </div>
+    <div id="root"></div>
   </body>
 </html>
