--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="Cache-control" content="no-cache" />
-        <title>axe hash router</title>
+        <title>jxta hash router</title>
         <!--<script defer="" src="app.js"></script>-->
     </head>
     <body>
